--- a/pages/compromiso.html
+++ b/pages/compromiso.html
@@ -17,13 +17,15 @@
   <body class="pagina5">
     <nav class="navbar navbar-dark bg-dark">
       <div class="container-fluid">
-        <img
-          src="https://media-cdn.tripadvisor.com/media/photo-s/25/68/e9/5c/gastrobar.jpg"
-          alt="Logo"
-          width="60"
-          height="60"
-          class="d-inline-block align-text-top rounded-circle ms-2"
-        />
+        <a href="/index.html">
+          <img
+            src="https://media-cdn.tripadvisor.com/media/photo-s/25/68/e9/5c/gastrobar.jpg"
+            alt="Logo"
+            width="60"
+            height="60"
+            class="d-inline-block align-text-top rounded-circle ms-2"
+          />
+        </a>
         <button
           class="navbar-toggler"
           type="button"
