--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,64 +5,154 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>IndaContacto</title>
-
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
-
     <link rel="stylesheet" href="../css/styles.css" />
   </head>
-
   <body class="pagina3">
-    <div class="container-fluid">
-      <nav class="navbar">
-        <div class="container">
-          <a class="navbar-brand" href="../index.html">
+    <nav class="navbar navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a href="/index.html">
+          <img
+            src="https://media-cdn.tripadvisor.com/media/photo-s/25/68/e9/5c/gastrobar.jpg"
+            alt="Logo"
+            width="60"
+            height="60"
+            class="d-inline-block align-text-top rounded-circle ms-2"
+          />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="offcanvas"
+          data-bs-target="#offcanvasDarkNavbar"
+          aria-controls="offcanvasDarkNavbar"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="offcanvas offcanvas-end text-bg-dark"
+          tabindex="-1"
+          id="offcanvasDarkNavbar"
+          aria-labelledby="offcanvasDarkNavbarLabel"
+        >
+          <div class="offcanvas-header">
             <img
               src="https://media-cdn.tripadvisor.com/media/photo-s/25/68/e9/5c/gastrobar.jpg"
-              alt=""
-              width="130"
-              height="130"
-              class="d-inline-block rounded-circle"
+              alt="Logo"
+              width="80"
+              height="80"
+              class="d-inline-block align-text-top rounded-circle ms-2"
             />
-          </a>
+            <button
+              type="button"
+              class="btn-close btn-close-white"
+              data-bs-dismiss="offcanvas"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="offcanvas-body">
+            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="/index.html"
+                  >Home</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./pages/quienessomos.html"
+                  >Conocenos un poco mejor</a
+                >
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Carta
+                </a>
+                <ul class="dropdown-menu dropdown-menu-dark">
+                  <li><a class="dropdown-item" href="#">Nuestros platos</a></li>
+                  <li><a class="dropdown-item" href="#">Postres</a></li>
+                  <li>
+                    <hr class="dropdown-divider" />
+                  </li>
+                  <li><a class="dropdown-item" href="#">Cervezas</a></li>
+                  <li><a class="dropdown-item" href="#">Vinos</a></li>
+                  <li><a class="dropdown-item" href="#">Cocteles</a></li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./pages/quienessomos.html"
+                  >Reserva tu mesa</a
+                >
+              </li>
+            </ul>
+          </div>
         </div>
-      </nav>
-      <h3 class="text-center text-decoration-underline text-light mt-4">
+      </div>
+    </nav>
+    <div class="formSugerencias">
+      <h3 class="text-center text-decoration-underline text-light mt-5">
         SUGERENCIAS
       </h3>
-      <div class="mb-3">
-        <label for="exampleFormControlInput1" class="form-label text-light mt-4">Dirección de correo</label>
-        <input
-          type="email"
-          class="form-control"
-          id="exampleFormControlInput1"
-          placeholder="name@example.com"
-        />
-      </div>
-      <div class="mb-3">
-        <label for="exampleFormControlTextarea1" class="form-label text-light">Cuentanos!</label>
-        <textarea
-          class="form-control"
-          id="exampleFormControlTextarea1"
-          rows="3"
-        ></textarea>
-      </div>
-      <ul class="nav justify-content-center mt-5">
-        <li class="nav-item mt-4">
-          <a class="nav-link active text-light" aria-current="page" href="../index.html">Home</a>
-        </li>
-        <li class="nav-item mt-4">
-          <a class="nav-link text-light" href="../pages/reservas.html">Reservas</a>
-        </li>
-        <li class="nav-item mt-4">
-          <a class="nav-link text-light" href="../pages/contacto.html">Contacto</a>
-        </li>
-      </ul>
+      <form class="mx-auto mt-4" style="max-width: 400px">
+        <div class="mb-3">
+          <label
+            for="exampleFormControlInput1"
+            class="form-label text-light mt-4"
+            >Dirección de correo</label
+          >
+          <input
+            type="email"
+            class="form-control"
+            id="exampleFormControlInput1"
+            placeholder="name@example.com"
+          />
+        </div>
+        <div class="mb-3">
+          <label for="exampleFormControlTextarea1" class="form-label text-light"
+            >Cuentanos!</label
+          >
+          <textarea
+            class="form-control"
+            id="exampleFormControlTextarea1"
+            rows="3"
+          ></textarea>
+        </div>
+        <div class="text-center">
+          <button type="submit" class="btn btn-secondary">Enviar</button>
+        </div>
+      </form>
     </div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-bottom">
+      <div class="container">
+        <div class="navbar-collapse justify-content-center" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#"
+                >Idiomas</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../pages/compromiso.html">Compromiso</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
   </body>
-  
 </html>
