--- a/pages/carta.html
+++ b/pages/carta.html
@@ -11,6 +11,12 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
+    <link
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+  rel="stylesheet"
+  integrity="sha384-XX36E+2Bjez+72Z5Vn7Kb2qcZC2SoIr5lHahD0kDzq2c65zby9q12tkM1etJXgdT"
+  crossorigin="anonymous"
+/>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="../css/styles.css" />
   </head>
@@ -25,7 +31,7 @@
             height="60"
             class="d-inline-block align-text-top rounded-circle ms-2"
           />
-        </a>
+        </a>     
         <button
           class="navbar-toggler"
           type="button"
@@ -109,219 +115,178 @@
             </ul>
           </div>
         </div>
-      </div>
-    </nav>
-    <div class="container-fluid text-center mt-5">
-      <h3 class="text-center text-decoration-underline">NUESTRA CARTA</h3>
-      <div class="row mb-5">
-        <div class="col-md-12 mt-5">
-          <div class="row">
-            <div class="col-md-3 mt-5">
-              <img
-                src="imagen1.jpg"
-                alt="Producto 1"
-                class="img-fluid rounded-3"
-              />
-              <h5><b>Nombre del Producto 1</b></h5>
-              <p>Descripción breve del producto.</p>
-              <p class="price">$9.99</p>
-            </div>
-            <div class="col-md-3 mt-5">
-              <img
-                src="imagen1.jpg"
-                alt="Producto 1"
-                class="img-fluid rounded-3"
-              />
-              <h5><b>Nombre del Producto 1</b></h5>
-              <p>Descripción breve del producto.</p>
-              <p class="price">$9.99</p>
-            </div>
-            <div class="col-md-3 mt-5">
-              <img
-                src="imagen1.jpg"
-                alt="Producto 1"
-                class="img-fluid rounded-3"
-              />
-              <h5><b>Nombre del Producto 1</b></h5>
-              <p>Descripción breve del producto.</p>
-              <p class="price">$9.99</p>
-            </div>
-            <div class="col-md-3 mt-5">
-              <img
-                src="imagen1.jpg"
-                alt="Producto 1"
-                class="img-fluid rounded-3"
-              />
-              <h5><b>Nombre del Producto 1</b></h5>
-              <p>Descripción breve del producto.</p>
-              <p class="price">$9.99</p>
-            </div>
-            <div class="col-md-3 mt-5">
-              <img
-                src="imagen1.jpg"
-                alt="Producto 1"
-                class="img-fluid rounded-3"
-              />
-              <h5><b>Nombre del Producto 1</b></h5>
-              <p>Descripción breve del producto.</p>
-              <p class="price">$9.99</p>
-            </div>
-            <div class="col-md-3 mt-5">
-              <img
-                src="imagen1.jpg"
-                alt="Producto 1"
-                class="img-fluid rounded-3"
-              />
-              <h5><b>Nombre del Producto 1</b></h5>
-              <p>Descripción breve del producto.</p>
-              <p class="price">$9.99</p>
-            </div>
-            <div class="col-md-3 mt-5">
-              <img
-                src="imagen1.jpg"
-                alt="Producto 1"
-                class="img-fluid rounded-3"
-              />
-              <h5><b>Nombre del Producto 1</b></h5>
-              <p>Descripción breve del producto.</p>
-              <p class="price">$9.99</p>
-            </div>
-            <div class="col-md-3 mt-5">
-              <img
-                src="imagen1.jpg"
-                alt="Producto 1"
-                class="img-fluid rounded-3"
-              />
-              <h5><b>Nombre del Producto 1</b></h5>
-              <p>Descripción breve del producto.</p>
-              <p class="price">$9.99</p>
-            </div>
-            <div class="col-md-3 mt-5">
-              <img
-                src="imagen1.jpg"
-                alt="Producto 1"
-                class="img-fluid rounded-3"
-              />
-              <h5><b>Nombre del Producto 1</b></h5>
-              <p>Descripción breve del producto.</p>
-              <p class="price">$9.99</p>
-            </div>
-            <div class="col-md-3 mt-5">
-              <img
-                src="imagen1.jpg"
-                alt="Producto 1"
-                class="img-fluid rounded-3"
-              />
-              <h5><b>Nombre del Producto 1</b></h5>
-              <p>Descripción breve del producto.</p>
-              <p class="price">$9.99</p>
-            </div>
-            <div class="col-md-3 mt-5">
-              <img
-                src="imagen1.jpg"
-                alt="Producto 1"
-                class="img-fluid rounded-3"
-              />
-              <h5><b>Nombre del Producto 1</b></h5>
-              <p>Descripción breve del producto.</p>
-              <p class="price">$9.99</p>
-            </div>
-            <div class="col-md-3 mt-5">
-              <img
-                src="imagen1.jpg"
-                alt="Producto 1"
-                class="img-fluid rounded-3"
-              />
-              <h5><b>Nombre del Producto 1</b></h5>
-              <p>Descripción breve del producto.</p>
-              <p class="price">$9.99</p>
-            </div>
-            <div class="col-md-3 mt-5">
-              <img
-                src="imagen1.jpg"
-                alt="Producto 1"
-                class="img-fluid rounded-3"
-              />
-              <h5><b>Nombre del Producto 1</b></h5>
-              <p>Descripción breve del producto.</p>
-              <p class="price">$9.99</p>
-            </div>
-            <div class="col-md-3 mt-5">
-              <img
-                src="imagen1.jpg"
-                alt="Producto 1"
-                class="img-fluid rounded-3"
-              />
-              <h5><b>Nombre del Producto 1</b></h5>
-              <p>Descripción breve del producto.</p>
-              <p class="price">$9.99</p>
-            </div>
-            <div class="col-md-3 mt-5">
-              <img
-                src="imagen1.jpg"
-                alt="Producto 1"
-                class="img-fluid rounded-3"
-              />
-              <h5><b>Nombre del Producto 1</b></h5>
-              <p>Descripción breve del producto.</p>
-              <p class="price">$9.99</p>
-            </div>
-            <div class="col-md-3 mt-5">
-              <img
-                src="imagen1.jpg"
-                alt="Producto 1"
-                class="img-fluid rounded-3"
-              />
-              <h5><b>Nombre del Producto 1</b></h5>
-              <p>Descripción breve del producto.</p>
-              <p class="price">$9.99</p>
-            </div>
-            <div class="col-md-3 mt-5">
-              <img
-                src="imagen1.jpg"
-                alt="Producto 1"
-                class="img-fluid rounded-3"
-              />
-              <h5><b>Nombre del Producto 1</b></h5>
-              <p>Descripción breve del producto.</p>
-              <p class="price">$9.99</p>
-            </div>
-            <div class="col-md-3 mt-5">
-              <img
-                src="imagen1.jpg"
-                alt="Producto 1"
-                class="img-fluid rounded-3"
-              />
-              <h5><b>Nombre del Producto 1</b></h5>
-              <p>Descripción breve del producto.</p>
-              <p class="price">$9.99</p>
-            </div>
-            <div class="col-md-3 mt-5">
-              <img
-                src="imagen1.jpg"
-                alt="Producto 1"
-                class="img-fluid rounded-3"
-              />
-              <h5><b>Nombre del Producto 1</b></h5>
-              <p>Descripción breve del producto.</p>
-              <p class="price">$9.99</p>
-            </div>
-            <div class="col-md-3 mt-5">
-              <img
-                src="imagen1.jpg"
-                alt="Producto 1"
-                class="img-fluid rounded-3"
-              />
-              <h5><b>Nombre del Producto 1</b></h5>
-              <p>Descripción breve del producto.</p>
-              <p class="price">$9.99</p>
+        <div class="carrito-info">
+          <img
+            src="../img/carrito.png"
+            alt="Carrito"
+            width="30"
+            height="30"
+            class="imgCarrito d-inline-block align-text-top rounded-circle ms-2"
+            data-bs-toggle="modal"
+            data-bs-target="#carrito-modal"
+          />
+          <span id="carrito-count" class="carrito-count">0</span>
+        </div>        
+        <div class="modal fade" id="carrito-modal" tabindex="-1" aria-labelledby="carrito-modal-label" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="carrito-modal-label">Carrito de Compras</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                <ul class="list-group">
+                </ul>
+              </div>
+              <div class="carrito-container">
+                <p>Total platos en el carrito: <span id="carrito-modal-count">0</span></p>
+              </div>
             </div>
           </div>
         </div>
+    </nav>
+    <div class="container">
+      <h1 class="text-center mb-4">CARTA</h1> 
+      <div class="row">
+        <div class="col-md-6">
+          <div class="card">
+            <div class="card-body">
+              <h2 class="card-title">Entrantes</h2>
+              <ul class="list-group">
+                <li class="list-group-item">
+                  <span class="dish-name">Carpaccio de Res</span>
+                  <span class="dish-price">10.50 €</span>
+                  <button
+                  class="btn btn-sm btn-primary btn-agregar"
+                  data-nombre="Carpaccio de Res"
+                  data-precio="10.50"
+                >
+                  <i class="fas fa-plus"></i> Agregar al carrito
+                </button>
+                <button
+                  class="btn btn-sm btn-danger btn-quitar"
+                  data-nombre="Carpaccio de Res"
+                >
+                  <i class="fas fa-minus"></i> Quitar del carrito
+                </button>
+                
+                </li>
+                <li class="list-group-item">
+                  <span class="dish-name">Ensalada Mediterránea</span>
+                  <span class="dish-price">8.75 €</span>
+                  <button class="btn btn-sm btn-primary btn-agregar" data-nombre="Ensalada Mediterránea" data-precio="8.75">Agregar al carrito</button>
+                </li>
+                <li class="list-group-item">
+                  <span class="dish-name">Calamares Fritos</span>
+                  <span class="dish-price">9.25 €</span>
+                  <button class="btn btn-sm btn-primary btn-agregar" data-nombre="Calamares Fritos" data-precio="9.25">Agregar al carrito</button>
+                </li>
+                <li class="list-group-item">
+                  <span class="dish-name">Tartar de Atún</span>
+                  <span class="dish-price">12.00 €</span>
+                </li>
+                <li class="list-group-item">
+                  <span class="dish-name">Bruschetta de Tomate</span>
+                  <span class="dish-price">6.25 €</span>
+                </li>
+                <li class="list-group-item">
+                  <span class="dish-name">Croquetas de Jamón</span>
+                  <span class="dish-price">7.50 €</span>
+                </li>
+                <li class="list-group-item">
+                  <span class="dish-name">Rollitos de Primavera</span>
+                  <span class="dish-price">8.00 €</span>
+                </li>
+                <li class="list-group-item">
+                  <span class="dish-name">Hummus con Vegetales</span>
+                  <span class="dish-price">6.75 €</span>
+                </li>
+                <li class="list-group-item">
+                  <span class="dish-name">Sopa del Día</span>
+                  <span class="dish-price">5.50 €</span>
+                </li>
+                <li class="list-group-item">
+                  <span class="dish-name">Queso de Cabra al Horno</span>
+                  <span class="dish-price">9.50 €</span>
+                </li>
+                <li class="list-group-item">
+                  <span class="dish-name">Langostinos al Ajillo</span>
+                  <span class="dish-price">7.75 €</span>
+                </li>
+                <li class="list-group-item">
+                  <span class="dish-name">Aguacate Relleno</span>
+                  <span class="dish-price">7.75 €</span>
+                </li>
+                <li class="list-group-item">
+                  <span class="dish-name">Tabla de Quesos</span>
+                  <span class="dish-price">13.50 €</span>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="cardPrincipales">
+            <div class="card-body">
+              <h2 class="card-title">Platos Principales</h2>
+              <ul class="list-group">
+                <li class="list-group-item">
+                  <span class="dish-name">Filete Mignon</span>
+                  <span class="dish-price">22.95 €</span>
+                </li>
+                <li class="list-group-item">
+                  <span class="dish-name">Risotto de Champiñones</span>
+                  <span class="dish-price">16.50 €</span>
+                </li>
+                <li class="list-group-item">
+                  <span class="dish-name">Salmón a la Parrilla</span>
+                  <span class="dish-price">18.75 €</span>
+                </li>
+                <li class="list-group-item">
+                  <span class="dish-name">Lasagna Bolognesa</span>
+                  <span class="dish-price">14.95 €</span>
+                </li>
+                <li class="list-group-item">
+                  <span class="dish-name">Pechuga de Pollo Rellena</span>
+                  <span class="dish-price">17.25 €</span>
+                </li>
+                <li class="list-group-item">
+                  <span class="dish-name">Paella Valenciana</span>
+                  <span class="dish-price">10.00 €</span>
+                </li>
+                <li class="list-group-item">
+                  <span class="dish-name">Cordero a la Miel</span>
+                  <span class="dish-price">19.75 €</span>
+                </li>
+          </ul>
+        </div>
       </div>
+    <div class="cardPostres">
+      <div class="card-body">
+        <h2 class="card-title">Postres</h2>
+        <ul class="list-group">
+          <li class="list-group-item">
+            <span class="dish-name">Tiramisú</span>
+            <span class="dish-price">6.50 €</span>
+          </li>
+          <li class="list-group-item">
+            <span class="dish-name">Cheesecake de Frambuesa</span>
+            <span class="dish-price">7.00 €</span>
+          </li>
+          <li class="list-group-item">
+            <span class="dish-name">Coulant de Chocolate</span>
+            <span class="dish-price">8.50 €</span>
+          </li>
+          <li class="list-group-item">
+            <span class="dish-name">Frutas Frescas</span>
+            <span class="dish-price">5.00 €</span>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
       <nav
-        class="navbar footer navbar-expand-lg navbar-dark bg-dark fixed-bottom"
-      >
+        class="navbar footer navbar-expand-lg navbar-dark bg-dark fixed-bottom">
         <div class="container">
           <div class="navbar-collapse justify-content-center" id="navbarNav">
             <ul class="navbar-nav">
@@ -343,5 +308,6 @@
         </div>
       </nav>
     </div>
+    <script src="../carrito.js"></script>
   </body>
 </html>
