--- a/pages/carta.html
+++ b/pages/carta.html
@@ -153,7 +153,7 @@
             <div class="card-body">
               <h2 class="card-title">Entrantes</h2>
               <ul class="list-group">
-                <li class="list-group-item">
+                <li class="list-group-item d-flex justify-content-between align-items-center">
                   <span class="dish-name">Carpaccio de Res</span>
                   <span class="dish-price">10.50 €</span>
                   <img
@@ -170,7 +170,7 @@
                     data-nombre="Carpaccio de Res"
                   />
                 </li>
-                <li class="list-group-item">
+                <li class="list-group-item d-flex justify-content-between align-items-center">
                   <span class="dish-name">Ensalada Mediterránea</span>
                   <span class="dish-price">8.75 €</span>
                   <img
@@ -184,10 +184,10 @@
                     class="eliminarBoton btn-icon btn-quitar"
                     src="../img/eliminar.png"
                     alt="Quitar del carrito"
-                    data-nombre="Ensalada Mediterráneas"
+                    data-nombre="Ensalada Mediterránea"
                   />
                 </li>
-                <li class="list-group-item">
+                <li class="list-group-item d-flex justify-content-between align-items-center">
                   <span class="dish-name">Calamares Fritos</span>
                   <span class="dish-price">9.25 €</span>
                   <img
@@ -204,7 +204,7 @@
                     data-nombre="Calamares Fritos"
                   />
                 </li>
-                <li class="list-group-item">
+                <li class="list-group-item d-flex justify-content-between align-items-center">
                   <span class="dish-name">Tartar de Atún</span>
                   <span class="dish-price">12.00 €</span>
                   <img
@@ -221,7 +221,7 @@
                     data-nombre="Tartar de Atún"
                   />
                 </li>
-                <li class="list-group-item">
+                <li class="list-group-item d-flex justify-content-between align-items-center">
                   <span class="dish-name">Bruschetta de Tomate</span>
                   <span class="dish-price">6.25 €</span>
                   <img
@@ -238,7 +238,7 @@
                   data-nombre="Bruschetta de Tomate"
                 />
               </li>
-                <li class="list-group-item">
+              <li class="list-group-item d-flex justify-content-between align-items-center">
                   <span class="dish-name">Croquetas de Jamón</span>
                   <span class="dish-price">7.50 €</span>
                   <img
@@ -255,7 +255,7 @@
                   data-nombre="Croquetas de Jamón"
                 />
               </li>
-                <li class="list-group-item">
+              <li class="list-group-item d-flex justify-content-between align-items-center">
                   <span class="dish-name">Rollitos de Primavera</span>
                   <span class="dish-price">8.00 €</span>
                   <img
@@ -272,7 +272,7 @@
                   data-nombre="Rollitos de Primavera"
                 />
               </li>
-                <li class="list-group-item">
+              <li class="list-group-item d-flex justify-content-between align-items-center">
                   <span class="dish-name">Hummus con Vegetales</span>
                   <span class="dish-price">6.75 €</span>
                   <img
@@ -289,7 +289,7 @@
                   data-nombre="Hummus con Vegetales"
                 />
               </li>
-                <li class="list-group-item">
+              <li class="list-group-item d-flex justify-content-between align-items-center">
                   <span class="dish-name">Sopa del Día</span>
                   <span class="dish-price">5.50 €</span>
                   <img
@@ -306,7 +306,7 @@
                   data-nombre="Sopa del Día"
                 />
               </li>
-                <li class="list-group-item">
+              <li class="list-group-item d-flex justify-content-between align-items-center">
                   <span class="dish-name">Queso de Cabra al Horno</span>
                   <span class="dish-price">9.50 €</span>
                   <img
@@ -323,7 +323,7 @@
                   data-nombre="Queso de Cabra al Horno"
                 />
               </li>
-                <li class="list-group-item">
+              <li class="list-group-item d-flex justify-content-between align-items-center">
                   <span class="dish-name">Langostinos al Ajillo</span>
                   <span class="dish-price">7.75 €</span>
                   <img
@@ -340,7 +340,7 @@
                   data-nombre="Langostinos al Ajillo"
                 />
               </li>
-                <li class="list-group-item">
+              <li class="list-group-item d-flex justify-content-between align-items-center">
                   <span class="dish-name">Aguacate Relleno</span>
                   <span class="dish-price">7.75 €</span>
                   <img
@@ -357,7 +357,7 @@
                   data-nombre="Aguacate Relleno"
                 />
               </li>
-                <li class="list-group-item">
+              <li class="list-group-item d-flex justify-content-between align-items-center">
                   <span class="dish-name">Tabla de Quesos</span>
                   <span class="dish-price">13.50 €</span>
                   <img
@@ -383,33 +383,124 @@
             <div class="card-body">
               <h2 class="card-title">Platos Principales</h2>
               <ul class="list-group">
-                <li class="list-group-item">
+                <li class="list-group-item d-flex justify-content-between align-items-center">
                   <span class="dish-name">Filete Mignon</span>
                   <span class="dish-price">22.95 €</span>
+                  <img
+                  class="agregarBoton btn-icon btn-agregar"
+                  src="../img/mas2.png"
+                  alt="Agregar al carrito"
+                  data-nombre="Filete Mignon"
+                  data-precio="22.95"
+                />
+                <img
+                  class="eliminarBoton btn-icon btn-quitar"
+                  src="../img/eliminar.png"
+                  alt="Quitar del carrito"
+                  data-nombre="TFilete Mignon"
+                />
                 </li>
-                <li class="list-group-item">
+                <li class="list-group-item d-flex justify-content-between align-items-center">
                   <span class="dish-name">Risotto de Champiñones</span>
                   <span class="dish-price">16.50 €</span>
+                  <img
+                  class="agregarBoton btn-icon btn-agregar"
+                  src="../img/mas2.png"
+                  alt="Agregar al carrito"
+                  data-nombre="Risotto de Champiñones"
+                  data-precio="16.50"
+                />
+                <img
+                  class="eliminarBoton btn-icon btn-quitar"
+                  src="../img/eliminar.png"
+                  alt="Quitar del carrito"
+                  data-nombre="Risotto de Champiñones"
+                />
                 </li>
-                <li class="list-group-item">
+                <li class="list-group-item d-flex justify-content-between align-items-center">
                   <span class="dish-name">Salmón a la Parrilla</span>
                   <span class="dish-price">18.75 €</span>
+                  <img
+                  class="agregarBoton btn-icon btn-agregar"
+                  src="../img/mas2.png"
+                  alt="Agregar al carrito"
+                  data-nombre="Salmón a la Parrilla"
+                  data-precio="18.75"
+                />
+                <img
+                  class="eliminarBoton btn-icon btn-quitar"
+                  src="../img/eliminar.png"
+                  alt="Quitar del carrito"
+                  data-nombre="Salmón a la Parrilla"
+                />
                 </li>
-                <li class="list-group-item">
+                <li class="list-group-item d-flex justify-content-between align-items-center">
                   <span class="dish-name">Lasagna Bolognesa</span>
                   <span class="dish-price">14.95 €</span>
+                  <img
+                  class="agregarBoton btn-icon btn-agregar"
+                  src="../img/mas2.png"
+                  alt="Agregar al carrito"
+                  data-nombre="Lasagna Bolognesa"
+                  data-precio="14.95"
+                />
+                <img
+                  class="eliminarBoton btn-icon btn-quitar"
+                  src="../img/eliminar.png"
+                  alt="Quitar del carrito"
+                  data-nombre="Lasagna Bolognesa"
+                />
                 </li>
-                <li class="list-group-item">
+                <li class="list-group-item d-flex justify-content-between align-items-center">
                   <span class="dish-name">Pechuga de Pollo Rellena</span>
                   <span class="dish-price">17.25 €</span>
+                  <img
+                  class="agregarBoton btn-icon btn-agregar"
+                  src="../img/mas2.png"
+                  alt="Agregar al carrito"
+                  data-nombre="Pechuga de Pollo Rellena"
+                  data-precio="17.25"
+                />
+                <img
+                  class="eliminarBoton btn-icon btn-quitar"
+                  src="../img/eliminar.png"
+                  alt="Quitar del carrito"
+                  data-nombre="Pechuga de Pollo Rellena"
+                />
                 </li>
-                <li class="list-group-item">
+                <li class="list-group-item d-flex justify-content-between align-items-center">
                   <span class="dish-name">Paella Valenciana</span>
                   <span class="dish-price">10.00 €</span>
+                  <img
+                  class="agregarBoton btn-icon btn-agregar"
+                  src="../img/mas2.png"
+                  alt="Agregar al carrito"
+                  data-nombre="Paella Valenciana"
+                  data-precio="10.00"
+                />
+                <img
+                  class="eliminarBoton btn-icon btn-quitar"
+                  src="../img/eliminar.png"
+                  alt="Quitar del carrito"
+                  data-nombre="Paella Valenciana"
+                />
                 </li>
-                <li class="list-group-item">
+                <li class="list-group-item d-flex justify-content-between align-items-center">
                   <span class="dish-name">Cordero a la Miel</span>
                   <span class="dish-price">19.75 €</span>
+                  <img
+                  class="agregarBoton btn-icon btn-agregar"
+                  src="../img/mas2.png"
+                  alt="Agregar al carrito"
+                  data-nombre="Cordero a la Miel"
+                  data-precio="19.75"
+                />
+                <img
+                  class="eliminarBoton btn-icon btn-quitar"
+                  src="../img/eliminar.png"
+                  alt="Quitar del carrito"
+                  data-nombre="Cordero a la Miel"
+                />
                 </li>
           </ul>
         </div>
@@ -418,21 +509,73 @@
       <div class="card-body">
         <h2 class="card-title">Postres</h2>
         <ul class="list-group">
-          <li class="list-group-item">
+          <li class="list-group-item d-flex justify-content-between align-items-center">
             <span class="dish-name">Tiramisú</span>
             <span class="dish-price">6.50 €</span>
+            <img
+            class="agregarBoton btn-icon btn-agregar"
+            src="../img/mas2.png"
+            alt="Agregar al carrito"
+            data-nombre="Tiramisú"
+            data-precio="6.50"
+          />
+          <img
+            class="eliminarBoton btn-icon btn-quitar"
+            src="../img/eliminar.png"
+            alt="Quitar del carrito"
+            data-nombre="Tiramisú"
+          />
           </li>
-          <li class="list-group-item">
+          <li class="list-group-item d-flex justify-content-between align-items-center">
             <span class="dish-name">Cheesecake de Frambuesa</span>
             <span class="dish-price">7.00 €</span>
+            <img
+            class="agregarBoton btn-icon btn-agregar"
+            src="../img/mas2.png"
+            alt="Agregar al carrito"
+            data-nombre="Cheesecake de Frambuesa"
+            data-precio="7.00"
+          />
+          <img
+            class="eliminarBoton btn-icon btn-quitar"
+            src="../img/eliminar.png"
+            alt="Quitar del carrito"
+            data-nombre="Cheesecake de Frambuesa"
+          />
           </li>
-          <li class="list-group-item">
+          <li class="list-group-item d-flex justify-content-between align-items-center">
             <span class="dish-name">Coulant de Chocolate</span>
             <span class="dish-price">8.50 €</span>
+            <img
+            class="agregarBoton btn-icon btn-agregar"
+            src="../img/mas2.png"
+            alt="Agregar al carrito"
+            data-nombre="Coulant de Chocolate"
+            data-precio="8.50"
+          />
+          <img
+            class="eliminarBoton btn-icon btn-quitar"
+            src="../img/eliminar.png"
+            alt="Quitar del carrito"
+            data-nombre="TCoulant de Chocolate"
+          />
           </li>
-          <li class="list-group-item">
+          <li class="list-group-item d-flex justify-content-between align-items-center">
             <span class="dish-name">Frutas Frescas</span>
             <span class="dish-price">5.00 €</span>
+            <img
+            class="agregarBoton btn-icon btn-agregar"
+            src="../img/mas2.png"
+            alt="Agregar al carrito"
+            data-nombre="Frutas Frescas"
+            data-precio="5.00"
+          />
+          <img
+            class="eliminarBoton btn-icon btn-quitar"
+            src="../img/eliminar.png"
+            alt="Quitar del carrito"
+            data-nombre="Frutas Frescas"
+          />
           </li>
         </ul>
       </div>
